updated the index page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Testing</title>
 </head>
 <body>
-    Hello world and hello to you too.
+    <h1>Hello world and hello to you too.</h1>
+    <p>this is a paragraph
+
+    </p>
 </body>
 </html>
